# pg-eddy

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  justfile  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
benchmarks/: README.md  run_age_benchmark.pl  run_ivm_write_benchmark.pl  run_ldbc_benchmark.pl  run_prop_benchmark.pl  run_wal_producer_benchmark.pl
pg_eddy/: Cargo.toml  pg_eddy.control
pg_eddy/sql/: pg_eddy--0.1.0--0.2.0.sql  pg_eddy--0.1.0.sql  pg_eddy--0.10.0--0.11.0.sql  pg_eddy--0.10.0.sql  pg_eddy--0.11.0--0.12.0.sql  pg_eddy--0.11.0.sql  pg_eddy--0.12.0.sql  pg_eddy--0.2.0--0.3.0.sql  pg_eddy--0.2.0.sql  pg_eddy--0.3.0--0.4.0.sql  pg_eddy--0.3.0.sql  pg_eddy--0.4.0--0.5.0.sql  pg_eddy--0.4.0.sql  pg_eddy--0.5.0--0.5.1.sql  pg_eddy--0.5.0.sql  pg_eddy--0.5.1--0.6.0.sql  pg_eddy--0.5.1.sql  pg_eddy--0.6.0--0.7.0.sql  pg_eddy--0.6.0.sql  pg_eddy--0.7.0--0.8.0.sql  pg_eddy--0.8.0--0.9.0.sql  pg_eddy--0.9.0--0.10.0.sql
pg_eddy/src/: error.rs  lib.rs
pg_eddy/src/catalog/: constraints.rs  indexes.rs  labels.rs  locations.rs  mod.rs
pg_eddy/src/cypher/: ast.rs  executor.rs  lexer.rs  mod.rs  parser.rs  planner.rs  sql.rs
pg_eddy/src/ivm/: api.rs  catalog.rs  mirror.rs  mod.rs  pg_trickle.rs
pg_eddy/src/storage/: am.rs  cdc_message.rs  cdc_protocol.rs  edge_store.rs  mod.rs  mutation.rs  node_store.rs  page.rs  prop_store.rs  vacuum.rs  wal.rs  wal_decode.rs
pg_eddy_http/: Cargo.toml
pg_eddy_http/src/: main.rs
plans/: apoc_compat_plan.md  (+8 more)
(+19 files in other folders)
