[workspace]
resolver = "2"
members = [
    "pg_eddy",
    "pg_eddy_http",
]

[workspace.package]
version     = "0.12.0"
edition     = "2024"
license     = "Apache-2.0"
authors     = ["pg-eddy contributors"]
repository  = "https://github.com/pg-eddy/pg-eddy"

[workspace.dependencies]
pgrx      = "=0.18.0"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono     = { version = "0.4", features = ["std"] }
chrono-tz  = "0.9"
